README file fixed