@@ -1,8 +1,8 @@
 # java 21 template project
 
 Uses the following:
-* java 21 early access (set through jenv, check `.java-version` file)
-* maven wrapper with maven 3.6.3
+* `Java 21` early access
+* maven wrapper with `maven 3.6.3`
 
 ## Build & Run locally
 
@@ -14,6 +14,8 @@ Uses the following:
 ```bash
 ./run.sh
 ```
+Note: we can't exeucte jar file directly b/c some incubator and preview features should be enabled 
+using `--enable-preview --add-modules jdk.incubator.concurrent` JVM parameters.
 
 ## Unit tests.
 
@@ -21,4 +23,16 @@ For unit tests execute the following command
 ```bash
 ./mvnw clean test
 ```
+
+## Code Style
+
+Code formatted using [spotless-maven-plugin](https://github.com/diffplug/spotless/tree/master/plugin-maven ). The `spotless:apply` called just before the compilation 
+phase to format code properly.
+
+## Project Loom and co.
+
+* [JEP 444: Virtual Threads](https://openjdk.org/jeps/444)
+* [JEP 453: Structured Concurrency (Preview)](https://openjdk.org/jeps/453)
+* [JEP 429: Scoped Values (Incubator)](https://openjdk.org/jeps/429)
+
 
